--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "emotion-reset": "^3.0.1",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
