--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "emotion-reset": "^3.0.1",
     "next": "^11.0.1",
