--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "emotion-reset": "^3.0.1",
     "next": "^11.0.1",
+    "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
     "@types/node": "^16.4.10",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
     "eslint-plugin-react": "^7.24.0",
     "typescript": "^4.3.5"
   }
