--- a/package.json
+++ b/package.json
@@ -26,11 +26,19 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
-    "@types/node": "^16.4.10",
-    "@types/react": "^17.0.15",
+    "@types/node": "^16.4.13",
+    "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "^11.0.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.3.5"
   }
 }
