--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1"
   },
@@ -29,6 +30,7 @@
     "@types/node": "^16.4.13",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
+    "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-redux": "^7.1.18",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
