--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "emotion-reset": "^3.0.1",
+    "lodash": "^4.17.21",
     "next": "^11.1.0",
     "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
@@ -27,11 +28,13 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/node": "^16.4.13",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-redux": "^7.1.18",
+    "@types/lodash": "^4.14.172",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "eslint": "^7.32.0",
