--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "date-fns": "^2.23.0",
     "emotion-reset": "^3.0.1",
     "lodash": "^4.17.21",
     "next": "^11.1.0",
